# person-follower-ROS

./: CMakeLists.txt  README.md  package.xml
include/: controlReceive.hpp  openPoseTracker.hpp
include/comp3431_starter/: beacon.hpp  image_recorder.hpp
include/stalker/: BeaconInfo.h  yuhjhkb.hpp
launch/: beacons.launch  mainLaunch.launch
msg/: BeaconInfo.msg
scripts/: encodings.pickle  face_recogniser.py  follow_marker.py  r200_lowres
src/: addo.cpp  beacon.cpp  beacon_marker.cpp  follow_marker.py  hgj.cpp  image_recorder.cpp  initaliser.cpp  killSwitch.cpp  nav_control.cpp  openPoseTracker.cpp  path.cpp  person_marker.cpp  simple_follow.cpp  wallFollow.cpp
src/nodes/: beacon_node.cpp  blrehg.cpp  image_recorder.cpp  path.cpp  simple_follow.cpp
