<?xml version="1.0"?>
<package format="2">
    <name>stalker</name>
    <version>1.0.0</version>
    <description>ours</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="todo@todo.todo">todo</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>message_runtime</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>image_transport</depend>
    <depend>rviz</depend>
    <depend>cv_bridge</depend>

    <!-- RViz Plugins -->
    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
